# bencher

./: Dockerfile  README.md  container.sdef  docker-compose.yml  docker-entrypoint.sh  entrypoint.py  start_all.sh
.github/workflows/: docker_build.yml  update_scaffold_version.yml
BencherServer/: Dockerfile  pyproject.toml
BencherServer/bencherserver/: .benchmark-registry-unsupported.json  benchmark-registry.json  main.py  server.py
EboBenchmarks/: Dockerfile  pyproject.toml
EboBenchmarks/ebobenchmarks/: main.py
IOHBenchmarks/iohbenchmarks/: main.py
LassoBenchmarks/: Dockerfile  pyproject.toml
LassoBenchmarks/lassobenchmarks/: dna.py  main.py
MaxSATBenchmarks/: Dockerfile  pyproject.toml
MaxSATBenchmarks/maxsatbenchmarks/: data_loading.py  main.py
Mopta08Benchmark/: pyproject.toml
Mopta08Benchmark/mopta08benchmark/: main.py
MujocoBenchmarks/: Dockerfile  pyproject.toml
MujocoBenchmarks/mujocobenchmarks/: main.py
NevergradBenchmarks/: pyproject.toml
NevergradBenchmarks/nevergradbenchmarks/: main.py
NoDependencyBenchmark/: Dockerfile  pyproject.toml
NoDependencyBenchmark/nodependencybenchmark/: main.py
SVMBenchmarks/: Dockerfile  entrypoint.sh  pyproject.toml
SVMBenchmarks/svmbenchmarks/: main.py
