[tool.poetry]
name = "mujocobenchmarks"
version = "0.1.0"
description = ""
authors = ["Mona Lisa <leonard.papenmeier@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bencherscaffold = { git = "https://LeoIV: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@github.com/LeoIV/BencherScaffold.git", branch = "master" }
mujoco-py = { git = "https://github.com/LeoIV/mujoco-py.git" }
mujoco = "2.2.2"
gym = "~0.24"
numpy = "^1.20.1"

[tool.poetry.scripts]
start-benchmark-service = "mujocobenchmarks.main:serve"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
