[project]
name = "nevergradbenchmarks"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonard Papenmeier",email = "leonard.papenmeier@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "bencherscaffold (>=0.3.2,<0.4.0)",
    "torch (>=2.7.0,<3.0.0)",
    "nevergrad[benchmark] (>=1.0.12,<2.0.0)"

]


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
